--- a/Hoja_6_Arboles/nbproject/project.properties
+++ b/Hoja_6_Arboles/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=hoja_6_arboles.Hoja_6_Arboles
+main.class=hoja_7_arboles.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
